<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/eT_number1"
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="105dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/num1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eT_number2"
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/num2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_number1" />


    <CheckBox
        android:id="@+id/cBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="28dp"
        android:text="@string/cBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="180dp"
        android:text="@string/btnres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tVres"
        android:layout_width="208dp"
        android:layout_height="41dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="193dp"
        android:layout_marginBottom="180dp"
        android:text="@string/res"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/operation_group"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:checkedButton="@+id/btnadd"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/btnadd"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <RadioButton
            android:id="@+id/btnsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract" />

        <RadioButton
            android:id="@+id/btnmult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply" />

        <RadioButton
            android:id="@+id/btndivid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/divide" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>